OC-DS-P7-ML Feature selection : oubli ajout TARGET et SK_ID_CURR aux dataframes finaux, test jeux de données avec les variables les plus importantes plébiscitées, test jeux de données sans la variable magique difficilement explicable donc voir réel intérêt. ML : premier tests avec Pycaret pour sélectionner le modèle et le jeu de données

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ OC-DS-P7-MODELLING/notebooks/test_set.csv
 OC-DS-P7-MODELLING/notebooks/train_imp1_set.csv
 OC-DS-P7-MODELLING/notebooks/train_imp2_set.csv
 OC-DS-P7-MODELLING/notebooks/train_set.csv
+OC-DS-P7-MODELLING/notebooks/train_set.csv
+OC-DS-P7-MODELLING/notebooks/test_set_sans_var_magique.csv
+OC-DS-P7-MODELLING/notebooks/test_set_sans_var_magique_small.csv
+OC-DS-P7-MODELLING/notebooks/train_set_sans_var_magique.csv
+OC-DS-P7-MODELLING/notebooks/train_set_sans_var_magique_small.csv
+OC-DS-P7-MODELLING/notebooks/train_set_small.csv
+OC-DS-P7-MODELLING/notebooks/test_set_small.csv
+OC-DS-P7-MODELLING/notebooks/logs.log
