OC-DS-P7-ML Choix de l'algorithme et du jeu de données les plus performants. Opitmisation des hyperparamètres par optimisation bayésienne (skyopt, bayes_opt) et optuna. Essai de rééquilibrage des classes avec SMOTE.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ OC-DS-P7-MODELLING/notebooks/train_set_sans_var_magique_small.csv
 OC-DS-P7-MODELLING/notebooks/train_set_small.csv
 OC-DS-P7-MODELLING/notebooks/test_set_small.csv
 OC-DS-P7-MODELLING/notebooks/logs.log
+OC-DS-P7-MODELLING/notebooks/mlruns
